--- a/3/style.css
+++ b/3/style.css
@@ -1,51 +1,53 @@
-/* Основной фон страницы */
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #2e2e2e; /* Темный фон */
-    color: #e0e0e0; /* Светлый текст */
+    background-color: #2e2e2e; 
+    color: #e0e0e0; 
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+    margin-top: 80px;
+    margin-botton: 80px;
 }
 
-/* Контейнер формы */
+
 .form-container {
-    background-color: #3c3c3c; /* Темный фон формы */
+    background-color: #3c3c3c; 
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     width: 400px;
 }
 
-/* Элементы формы */
+
 .form-group {
     margin-bottom: 15px;
 }
 
-/* Множество тегов label */
+
 label {
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
-    color: #e0e0e0; /* Светлый цвет текста */
+    color: #e0e0e0; 
 }
 
-/* Поля ввода */
+
 input,
 select,
 textarea {
     width: 100%;
     padding: 10px;
     margin-top: 5px;
-    border: 1px solid #555; /* Темная рамка */
+    border: 1px solid #555; 
     border-radius: 5px;
-    background-color: #4a4a4a; /* Темный фон полей */
-    color: #e0e0e0; /* Светлый текст */
+    background-color: #4a4a4a;
+    color: #e0e0e0; 
 }
 
-/* Стили для радио-кнопок и чекбоксов */
+
 .radio-group,
 .checkbox-group {
     display: flex;
@@ -55,12 +57,12 @@ textarea {
 
 input[type="radio"],
 input[type="checkbox"] {
-    accent-color: #6c757d; /* Цвет для активных элементов */
+    accent-color: #6c757d; 
 }
 
-/* Кнопка отправки */
+
 button {
-    background-color: #6c757d; /* Темно-серый цвет кнопки */
+    background-color: #6c757d; 
     color: white;
     border: none;
     padding: 10px;
@@ -70,12 +72,12 @@ button {
     font-size: 16px;
 }
 
-/* Эффект при наведении на кнопку */
+
 button:hover {
-    background-color: #5a6268; /* Более темный оттенок */
+    background-color: #5a6268; 
 }
 
-/* Стиль для текста ошибок */
+
 p {
     color: red;
     font-size: 14px;
