--- a/3/styles.css
+++ b/3/styles.css
@@ -1,14 +1,14 @@
-/* Общие стили для HTML и body */
+
 html, body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background: url('background.png') no-repeat center center fixed;
+    background: url('background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #d0d0d0;
 }
 
-/* Основной контейнер */
+
 main {
     max-width: 600px;
     margin: 50px auto;
@@ -18,7 +18,7 @@ main {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-/* Форматирование формы */
+
 form {
     display: flex;
     flex-direction: column;
@@ -59,7 +59,7 @@ input[type="submit"]:hover {
     background-color: #003d80;
 }
 
-/* Адаптивность */
+
 @media screen and (max-width: 600px) {
     main {
         width: 90%;
